Issue with grid layout when overflow present was fixed.

--- a/src/app/accounts/accounts.component.scss
+++ b/src/app/accounts/accounts.component.scss
@@ -30,6 +30,7 @@
 
     .grid-item, .list-item {
         border: 1px solid transparent;
+        margin: 5px;
     }
 
     .category-container:not(:first-child) {
